--- a/index.html
+++ b/index.html
@@ -4,21 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            darkMode: 'class'
+        }
+    </script>
     <title>Kumpulan Lagu Daerah</title>
 </head>
-<body class="bg-gradient-to-br from-gray-100 to-gray-200 min-h-screen py-12 px-4 sm:px-6">
+<body class="bg-gradient-to-br from-gray-100 to-gray-200 dark:from-gray-800 dark:to-gray-900 min-h-screen py-12 px-4 sm:px-6 transition-colors duration-200">
+    <!-- Dark Mode Toggle -->
+    <div class="fixed top-4 right-4">
+        <button 
+            onclick="document.documentElement.classList.toggle('dark')"
+            class="bg-white dark:bg-gray-800 rounded-lg px-4 py-2 text-sm font-medium text-gray-900 dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 transition-colors duration-200 shadow-lg"
+        >
+            <span class="dark:hidden">🌙 Dark Mode</span>
+            <span class="hidden dark:inline">☀️ Light Mode</span>
+        </button>
+    </div>
+
     <div class="max-w-7xl mx-auto">
         <!-- Header -->
         <div class="text-center mb-12">
-            <h1 class="text-4xl font-bold text-gray-900 mb-4">Kumpulan Lagu Daerah</h1>
-            <p class="text-gray-600">Koleksi Lirik Lagu Daerah Indonesia</p>
+            <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">Kumpulan Lagu Daerah</h1>
+            <p class="text-gray-600 dark:text-gray-400">Koleksi Lirik Lagu Daerah Indonesia</p>
         </div>
 
         <!-- Cards Grid -->
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- Card 1 - Manuk Dadali -->
             <a href="./manukdadali.html" class="group">
-                <div class="bg-white rounded-xl shadow-lg overflow-hidden transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+                <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg overflow-hidden transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
                     <!-- Card Image -->
                     <div class="h-48 bg-gradient-to-r from-red-500 to-red-600 relative overflow-hidden">
                         <div class="absolute inset-0 flex items-center justify-center">
@@ -31,8 +47,8 @@
                     </div>
                     <!-- Card Content -->
                     <div class="p-6">
-                        <p class="text-gray-600 mb-4">Lagu kebanggaan Sunda yang menggambarkan burung garuda sebagai lambang negara Indonesia.</p>
-                        <div class="flex items-center text-sm text-gray-500">
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">Lagu kebanggaan Sunda yang menggambarkan burung garuda sebagai lambang negara Indonesia.</p>
+                        <div class="flex items-center text-sm text-gray-500 dark:text-gray-400">
                             <span class="mr-2">🎵</span>
                             <span>Lirik Sunda & Terjemahan</span>
                         </div>
@@ -41,12 +57,12 @@
             </a>
 
             <!-- Coming Soon Cards -->
-            <div class="bg-white/80 rounded-xl shadow overflow-hidden transition-all duration-300 backdrop-blur-sm">
-                <div class="h-48 bg-gradient-to-r from-gray-400 to-gray-500 relative overflow-hidden flex items-center justify-center">
+            <div class="bg-white/80 dark:bg-gray-800/80 rounded-xl shadow overflow-hidden transition-all duration-300 backdrop-blur-sm">
+                <div class="h-48 bg-gradient-to-r from-gray-400 to-gray-500 dark:from-gray-600 dark:to-gray-700 relative overflow-hidden flex items-center justify-center">
                     <span class="text-white text-xl font-semibold">Coming Soon</span>
                 </div>
                 <div class="p-6">
-                    <p class="text-gray-500">More songs will be added soon...</p>
+                    <p class="text-gray-500 dark:text-gray-400">More songs will be added soon...</p>
                 </div>
             </div>
         </div>
@@ -54,15 +70,15 @@
         <!-- Pagination -->
         <div class="mt-12 flex justify-center">
             <nav class="flex items-center gap-2">
-                <button class="px-4 py-2 bg-white text-gray-500 rounded-lg shadow hover:bg-gray-50 disabled:opacity-50" disabled>
+                <button class="px-4 py-2 bg-white dark:bg-gray-800 text-gray-500 dark:text-gray-400 rounded-lg shadow hover:bg-gray-50 dark:hover:bg-gray-700 disabled:opacity-50 transition-colors duration-200" disabled>
                     Previous
                 </button>
                 <div class="flex items-center gap-1">
-                    <span class="px-4 py-2 bg-red-600 text-white rounded-lg">1</span>
-                    <span class="px-4 py-2 bg-white text-gray-600 rounded-lg hover:bg-gray-50 cursor-not-allowed">2</span>
-                    <span class="px-4 py-2 bg-white text-gray-600 rounded-lg hover:bg-gray-50 cursor-not-allowed">3</span>
+                    <span class="px-4 py-2 bg-red-600 dark:bg-red-700 text-white rounded-lg">1</span>
+                    <span class="px-4 py-2 bg-white dark:bg-gray-800 text-gray-600 dark:text-gray-400 rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700 cursor-not-allowed transition-colors duration-200">2</span>
+                    <span class="px-4 py-2 bg-white dark:bg-gray-800 text-gray-600 dark:text-gray-400 rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700 cursor-not-allowed transition-colors duration-200">3</span>
                 </div>
-                <button class="px-4 py-2 bg-white text-gray-500 rounded-lg shadow hover:bg-gray-50 disabled:opacity-50" disabled>
+                <button class="px-4 py-2 bg-white dark:bg-gray-800 text-gray-500 dark:text-gray-400 rounded-lg shadow hover:bg-gray-50 dark:hover:bg-gray-700 disabled:opacity-50 transition-colors duration-200" disabled>
                     Next
                 </button>
             </nav>
