--- a/manukdadali.html
+++ b/manukdadali.html
@@ -98,7 +98,7 @@
                             <td class="px-6 py-4 text-gray-600 dark:text-gray-400 whitespace-normal">Kakinya panjang dan paruhnya melengkung</td>
                         </tr>
                         <tr class="group hover:bg-gray-50 dark:hover:bg-gray-700/50 transition-colors duration-200">
-                            <td class="px-6 py-4 text-gray-800 dark:text-gray-200 whitespace-normal">Ngepak mega bari hiberna tarik nyuruwuk</td>
+                            <td class="px-6 py-4 text-gray-800 dark:text-gray-200 whitespace-normal">Ngepak méga bari hiberna tarik nyuruwuk</td>
                             <td class="px-6 py-4 text-gray-600 dark:text-gray-400 whitespace-normal">Menyongsong awan sambil terbang dengan cepat</td>
                         </tr>
                         <tr class="group hover:bg-gray-50 dark:hover:bg-gray-700/50 transition-colors duration-200">
